# directory-scraper

./: .gitignore  ASYNC_ENRICHMENT_RESULTS.md  FINAL_ENRICHMENT_RESULTS.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  test_sixtyfour_api.sh
examples/: commands.md  schema_person.json  sites.yml
src/scraper/: __init__.py  cli.py  config.py  evaluate.py  fetcher.py  models.py  pagination.py  pipeline.py  storage.py  utils.py
src/scraper/enricher/: __init__.py  sixtyfour_client.py
src/scraper/extractor/: __init__.py  field_resolvers.py  heuristics.py  llm_extractor.py
tests/: __init__.py  conftest.py  test_evaluate.py  test_heuristics.py  test_integration.py  test_models.py  test_pagination.py  test_storage.py  test_utils.py
tests/fixtures/: sample_list_page.html  sample_profile_page.html
